--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "astro": "^4.6.3",
     "@astrojs/check": "^0.5.10",
     "typescript": "^5.4.5"
-  }
+  },
+	"packageManager": "pnpm@9.0.3"
 }
