--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
     "astro": "^4.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-type-animation": "^3.2.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.4.5"
+  },
+  "devDependencies": {
+    "astro-icon": "^1.1.0"
   }
 }
